--- a/ip.index.html
+++ b/ip.index.html
@@ -7,7 +7,7 @@
 
     <title> 🐍IP Info</title>
 
-    <link href="https://dilfish.icu/static/bootstrap.css" rel="stylesheet">
+    <link href="https://dev.ug/static/bootstrap.css" rel="stylesheet">
     <style>
 h1 {
      word-wrap:break-word;
@@ -31,7 +31,7 @@ h1 {
 
 
 
-   <script src="//dilfish.icu/static/jquery.js"></script>
-    <script src="//dilfish.icu/static/bootstrap.js"></script>
+   <script src="//dev.ug/static/jquery.js"></script>
+    <script src="//dev.ug/static/bootstrap.js"></script>
   </body>
 </html>
