--- a/index.html
+++ b/index.html
@@ -8,15 +8,122 @@
     <link rel="stylesheet" href="/bulma.css">
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+
+<div class="columns">
+  <div class="column">
+    First column
+  </div>
+  <div class="column">
+    Second column
+  </div>
+  <div class="column">
+    Third column
+  </div>
+  <div class="column">
+    Fourth column
+  </div>
+</div>
+
+<div class="columns">
+  <div class="column is-four-fifths">is-four-fifths</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-three-quarters">is-three-quarters</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-two-thirds">is-two-thirds</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-three-fifths">is-three-fifths</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-half">is-half</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-two-fifths">is-two-fifths</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-one-third">is-one-third</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-one-quarter">is-one-quarter</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+<div class="columns">
+  <div class="column is-one-fifth">is-one-fifth</div>
+  <div class="column">Auto</div>
+  <div class="column">Auto</div>
+</div>
+
+
+<div class="columns is-mobile">
+  <div class="column is-half is-offset-one-quarter"></div>
+</div>
+
+<div class="columns is-mobile">
+  <div class="column is-three-fifths is-offset-one-fifth"></div>
+</div>
+
+<div class="columns is-mobile">
+  <div class="column is-4 is-offset-8"></div>
+</div>
+
+<div class="columns is-mobile">
+  <div class="column is-11 is-offset-1"></div>
+</div>
+
+<div class="columns">
+  <div class="column is-narrow">
+    <div class="box" style="width: 200px;">
+      <p class="title is-5">Narrow column</p>
+      <p class="subtitle">This column is only 200px wide.</p>
     </div>
-  </section>
+  </div>
+  <div class="column">
+    <div class="box">
+      <p class="title is-5">Flexible column</p>
+      <p class="subtitle">This column will take up the remaining space available.</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="columns is-mobile">
+  <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
+    <code>is-three-quarters-mobile</code><br>
+    <code>is-two-thirds-tablet</code><br>
+    <code>is-half-desktop</code><br>
+    <code>is-one-third-widescreen</code><br>
+    <code>is-one-quarter-fullhd</code>
+  </div>
+  <div class="column">2</div>
+  <div class="column">3</div>
+  <div class="column">4</div>
+  <div class="column">5</div>
+</div>
+
   </body>
 </html>
