--- a/index.html
+++ b/index.html
@@ -1,129 +1,42 @@
-<!DOCTYPE html>
-<html>
+
+<!doctype html>
+<html lang="zh-cmn-Hans">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <html lang="zh-cmn-Hans">
-    <title>Hello World</title>
-    <link rel="stylesheet" href="/bulma.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="about">
+    <meta name="author" content="sean">
+    <meta name="theme-color" content="#DC3545"/>
+
+    <title>About this site & me</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.dilfish.icu/302/bootstrap.css" rel="stylesheet">
+
   </head>
+
   <body>
 
-<div class="columns">
-  <div class="column">
-    First column
-  </div>
-  <div class="column">
-    Second column
-  </div>
-  <div class="column">
-    Third column
-  </div>
-  <div class="column">
-    Fourth column
-  </div>
-</div>
+    <main role="main" class="container">
+      <h1 class="mt-5">🪛 About this site</h1>
+      <p class="lead">
+      Across the Great Wall we can reach every corner in the world.
+</p>
+      <h1 class="mt-5">About me</h1>
+      <p class="lead">
+veteran programmer，4hqbx8x9 atsign duck.com
+</p>
 
-<div class="columns">
-  <div class="column is-four-fifths">is-four-fifths</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
+</main>
 
-<div class="columns">
-  <div class="column is-three-quarters">is-three-quarters</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-two-thirds">is-two-thirds</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-three-fifths">is-three-fifths</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-half">is-half</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-two-fifths">is-two-fifths</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-one-third">is-one-third</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-one-quarter">is-one-quarter</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-<div class="columns">
-  <div class="column is-one-fifth">is-one-fifth</div>
-  <div class="column">Auto</div>
-  <div class="column">Auto</div>
-</div>
-
-
-<div class="columns is-mobile">
-  <div class="column is-half is-offset-one-quarter"></div>
-</div>
-
-<div class="columns is-mobile">
-  <div class="column is-three-fifths is-offset-one-fifth"></div>
-</div>
-
-<div class="columns is-mobile">
-  <div class="column is-4 is-offset-8"></div>
-</div>
-
-<div class="columns is-mobile">
-  <div class="column is-11 is-offset-1"></div>
-</div>
-
-<div class="columns">
-  <div class="column is-narrow">
-    <div class="box" style="width: 200px;">
-      <p class="title is-5">Narrow column</p>
-      <p class="subtitle">This column is only 200px wide.</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="box">
-      <p class="title is-5">Flexible column</p>
-      <p class="subtitle">This column will take up the remaining space available.</p>
-    </div>
-  </div>
-</div>
-
-
-<div class="columns is-mobile">
-  <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
-    <code>is-three-quarters-mobile</code><br>
-    <code>is-two-thirds-tablet</code><br>
-    <code>is-half-desktop</code><br>
-    <code>is-one-third-widescreen</code><br>
-    <code>is-one-quarter-fullhd</code>
-  </div>
-  <div class="column">2</div>
-  <div class="column">3</div>
-  <div class="column">4</div>
-  <div class="column">5</div>
-</div>
-
+    <footer class="footer">
+      <div class="container">
+  <span class="text-muted">
+        DEV.UG &copy;
+        All rights reserved，
+        2020-2023
+  </span>
+      </div>
+    </footer>
   </body>
 </html>
