--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>About this site & me</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.dilfish.icu/302/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.871116.xyz/302/bootstrap.css" rel="stylesheet">
 
   </head>
 
@@ -24,7 +24,7 @@
 </p>
       <h1 class="mt-5">About me</h1>
       <p class="lead">
-veteran programmer，4hqbx8x9 atsign duck.com
+veteran programmer, grshccji atsign duck.com
 </p>
 
 </main>
