--- a/ip.index.html
+++ b/ip.index.html
@@ -7,7 +7,7 @@
 
     <title> 🐍IP Info</title>
 
-    <link href="https://dev.ug/static/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.871116.xyz/302/bootstrap.css" rel="stylesheet">
     <style>
 h1 {
      word-wrap:break-word;
@@ -29,9 +29,7 @@ h1 {
   </main>
   {{ end }}
 
-
-
-   <script src="//dev.ug/static/jquery.js"></script>
-    <script src="//dev.ug/static/bootstrap.js"></script>
+   <script src="https://cdn.871116.xyz/302/jquery.js"></script>
+    <script src="https://cdn.871116.xyz/302/bootstrap.js"></script>
   </body>
 </html>
