--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ veteran programmer, grshccji atsign duck.com
     <footer class="footer">
       <div class="container">
   <span class="text-muted">
-        DEV.UG &copy;
+        871116.XYZ &copy;
         All rights reserved，
         2020-2023
   </span>
